# practice-c-malloc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  jq-tap-2-json.sh  requirements.txt
.github/workflows/: build.yml  built-test.yml
include/: exercise.h  pointers.h
src/: CMakeLists.txt  exercise.c  main.c  pointers.c
test/: CMakeLists.txt  test_pointers.c  test_pointers.py
